src/maketa/mta_parse.output
State 42 conflicts: 1 shift/reduce
State 44 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: list $end

    1 list: /* empty */
    2     | list typedefn
    3     | list enumdefn
    4     | list classdecl
    5     | list classdefn
    6     | list templdefn
    7     | list fundecl
    8     | list preparsed
    9     | list error

   10 preparsed: TA_TYPEDEF

   11 typedefn: typedefns

   12 typedefns: typedsub
   13          | typedsub COMMENT

   14 typedsub: TYPEDEF defn
   15         | TYPEDEF classdsub tdname term

   16 defn: type tyname term
   17     | type COMMENT tyname term
   18     | type term
   19     | type '(' '*' tyname ')' funargs term
   20     | type SCOPER '*' tyname

   21 enumdefn: enumdsub

   22 enumdsub: enumname enums '}' term

   23 enumname: enumnm '{'
   24         | enumnm COMMENT '{'
   25         | enumnm '{' COMMENT

   26 enumnm: ENUM tyname
   27       | ENUM

   28 classdecl: classdecls

   29 classdecls: classnm term
   30           | classnm term COMMENT

   31 classdefn: classdefns

   32 classdefns: classdsub term
   33           | classdsub varname term

   34 classdsub: classname membs '}'

   35 classname: classhead '{'
   36          | classhead COMMENT '{'
   37          | classhead '{' COMMENT

   38 classhead: classnm
   39          | classnm ':' classinh

   40 classnm: classkeyword tyname
   41        | classkeyword TYPE
   42        | classkeyword
   43        | structunion

   44 classinh: classpar
   45         | classinh ',' classpar

   46 classpar: type
   47         | classptyp type
   48         | NAME
   49         | classptyp NAME

   50 classptyp: classpmod
   51          | classptyp classpmod

   52 classpmod: access
   53          | VIRTUAL

   54 templdefn: templdefns

   55 templdefns: templdsub term
   56           | templdsub varname term

   57 templdsub: templname membs '}'

   58 templname: templhead '{'
   59          | templhead COMMENT '{'
   60          | templhead '{' COMMENT

   61 templhead: TEMPLATE templopen templpars '>' classhead

   62 templopen: '<'

   63 templpars: CLASS tyname
   64          | templpars ',' CLASS tyname

   65 fundecl: funnm

   66 funnm: REGFUN ftype regfundefn fundefn
   67      | REGFUN regfundefn fundefn

   68 regfundefn: methname funargs

   69 enums: enumline
   70      | enums enumline

   71 enumline: enumitm
   72         | enumitm COMMENT

   73 enumitm: enumitms
   74        | enumitms ','
   75        | error

   76 enumitms: enmitmname
   77         | enmitmname EQUALS enummath

   78 enummath: enummathitm
   79         | enummath '+' enummathitm
   80         | enummath '-' enummathitm

   81 enummathitm: NAME
   82            | NUMBER

   83 enmitmname: NAME

   84 membs: membline
   85      | membs membline

   86 membline: membdefn
   87         | methdefn
   88         | enumdsub
   89         | typedsub
   90         | classdsub term
   91         | error

   92 membdefn: basicmemb
   93         | PUBLIC ':'
   94         | PRIVATE ':'
   95         | PROTECTED ':'
   96         | COMMENT

   97 basicmemb: nostatmemb
   98          | STATIC nostatmemb

   99 nostatmemb: membtype membnames term
  100           | membnames term
  101           | membtype membname ARRAY term
  102           | membtype membfunp funargs term

  103 membnames: membname
  104          | membnames ',' membname

  105 membname: NAME

  106 membfunp: '(' '*' NAME ')'

  107 methdefn: basicmeth
  108         | consthsnm constfun fundefn
  109         | funtspec consthsnm constfun fundefn
  110         | consthsnm constfun constrlist fundefn
  111         | '~' consthsnm constfun fundefn
  112         | funtspec '~' consthsnm constfun fundefn
  113         | FRIEND ftype OPERATOR funargs fundefn
  114         | FRIEND OPERATOR funargs fundefn
  115         | FRIEND ftype term
  116         | FRIEND CLASS ftype term
  117         | FRIEND CLASS NAME term
  118         | FRIEND ftype methname funargs fundefn
  119         | FRIEND methname funargs fundefn

  120 basicmeth: nostatmeth
  121          | STATIC nostatmeth

  122 nostatmeth: membtype mbfundefn fundefn
  123           | mbfundefn fundefn
  124           | membtype OPERATOR funargs fundefn
  125           | membtype OPERATOR '(' ')' funargs fundefn
  126           | OPERATOR funargs fundefn

  127 mbfundefn: methname funargs

  128 methname: NAME

  129 fundefn: term
  130        | funsubdefn
  131        | funsubdecl term
  132        | COMMENT term
  133        | COMMENT funsubdefn
  134        | COMMENT funsubdecl term

  135 funsubdefn: FUNCTION
  136           | CONST FUNCTION
  137           | CONST COMMENT FUNCTION

  138 funsubdecl: EQUALS
  139           | CONST
  140           | CONST EQUALS

  141 funargs: '(' ')'
  142        | '(' args ')'

  143 constfun: ')'
  144         | args ')'

  145 args: argdefn
  146     | args ',' argdefn
  147     | args '.' '.' '.'

  148 argdefn: subargdefn
  149        | subargdefn EQUALS

  150 subargdefn: type
  151           | type NAME
  152           | type NAME ARRAY
  153           | type '(' '*' NAME ')' funargs
  154           | NAME

  155 constrlist: constref
  156           | constrlist constref

  157 constref: constcoln TYPE FUNCALL

  158 consthsnm: THISNAME '('

  159 constcoln: ':'

  160 ptrs: '*'
  161     | ptrs '*'

  162 membtype: ftype

  163 ftype: type
  164      | funtspec
  165      | funtspec type

  166 tyname: NAME

  167 type: noreftype
  168     | noreftype '&'

  169 noreftype: constype
  170          | constype ptrs

  171 constype: subtype
  172         | CONST subtype

  173 subtype: combtype
  174        | structunion combtype
  175        | structunion tyname
  176        | TYPE SCOPER NAME
  177        | THISNAME SCOPER NAME
  178        | TYPE SCOPER TYPE
  179        | THISNAME SCOPER TYPE
  180        | SCOPER TYPE
  181        | THISNAME
  182        | TYPE templopen templtypes '>'
  183        | THISNAME templopen templtypes '>'

  184 combtype: TYPE
  185         | combtype TYPE

  186 templtypes: TYPE
  187           | templtypes ',' TYPE

  188 tdname: NAME
  189       | TYPE

  190 funtspec: funtsmod
  191         | funtspec funtsmod

  192 funtsmod: FUNTYPE
  193         | VIRTUAL

  194 varname: NAME
  195        | NAME ARRAY

  196 term: ';'

  197 access: PUBLIC
  198       | PRIVATE
  199       | PROTECTED

  200 structunion: STRUCT
  201            | UNION

  202 classkeyword: CLASS


Terminals, with rules where they appear

$end (0) 0
'&' (38) 168
'(' (40) 19 106 125 141 142 153 158
')' (41) 19 106 125 141 142 143 144 153
'*' (42) 19 20 106 153 160 161
'+' (43) 79
',' (44) 45 64 74 104 146 187
'-' (45) 80
'.' (46) 147
':' (58) 39 93 94 95 159
';' (59) 196
'<' (60) 62
'>' (62) 61 182 183
'{' (123) 23 24 25 35 36 37 58 59 60
'}' (125) 22 34 57
'~' (126) 111 112
error (256) 9 75 91
CLASS (258) 63 64 116 117 202
STRUCT (259) 200
UNION (260) 201
ENUM (261) 26 27
FUNTYPE (262) 192
STATIC (263) 98 121
TEMPLATE (264) 61
CONST (265) 136 137 139 140 172
TYPEDEF (266) 14 15
TA_TYPEDEF (267) 10
TYPE (268) 41 157 176 178 179 180 182 184 185 186 187 189
NUMBER (269) 82
FUNCTION (270) 135 136 137
ARRAY (271) 101 152 195
NAME (272) 48 49 81 83 105 106 117 128 151 152 153 154 166 176 177
    188 194 195
COMMENT (273) 13 17 24 25 30 36 37 59 60 72 96 132 133 134 137
FUNCALL (274) 157
SCOPER (275) 20 176 177 178 179 180
EQUALS (276) 77 138 140 149
PUBLIC (277) 93 197
PRIVATE (278) 94 198
PROTECTED (279) 95 199
OPERATOR (280) 113 114 124 125 126
FRIEND (281) 113 114 115 116 117 118 119
THISNAME (282) 158 177 179 181 183
REGFUN (283) 66 67
VIRTUAL (284) 53 193


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
list (46)
    on left: 1 2 3 4 5 6 7 8 9, on right: 0 2 3 4 5 6 7 8 9
preparsed (47)
    on left: 10, on right: 8
typedefn (48)
    on left: 11, on right: 2
typedefns (49)
    on left: 12 13, on right: 11
typedsub (50)
    on left: 14 15, on right: 12 13 89
defn (51)
    on left: 16 17 18 19 20, on right: 14
enumdefn (52)
    on left: 21, on right: 3
enumdsub (53)
    on left: 22, on right: 21 88
enumname (54)
    on left: 23 24 25, on right: 22
enumnm (55)
    on left: 26 27, on right: 23 24 25
classdecl (56)
    on left: 28, on right: 4
classdecls (57)
    on left: 29 30, on right: 28
classdefn (58)
    on left: 31, on right: 5
classdefns (59)
    on left: 32 33, on right: 31
classdsub (60)
    on left: 34, on right: 15 32 33 90
classname (61)
    on left: 35 36 37, on right: 34
classhead (62)
    on left: 38 39, on right: 35 36 37 61
classnm (63)
    on left: 40 41 42 43, on right: 29 30 38 39
classinh (64)
    on left: 44 45, on right: 39 45
classpar (65)
    on left: 46 47 48 49, on right: 44 45
classptyp (66)
    on left: 50 51, on right: 47 49 51
classpmod (67)
    on left: 52 53, on right: 50 51
templdefn (68)
    on left: 54, on right: 6
templdefns (69)
    on left: 55 56, on right: 54
templdsub (70)
    on left: 57, on right: 55 56
templname (71)
    on left: 58 59 60, on right: 57
templhead (72)
    on left: 61, on right: 58 59 60
templopen (73)
    on left: 62, on right: 61 182 183
templpars (74)
    on left: 63 64, on right: 61 64
fundecl (75)
    on left: 65, on right: 7
funnm (76)
    on left: 66 67, on right: 65
regfundefn (77)
    on left: 68, on right: 66 67
enums (78)
    on left: 69 70, on right: 22 70
enumline (79)
    on left: 71 72, on right: 69 70
enumitm (80)
    on left: 73 74 75, on right: 71 72
enumitms (81)
    on left: 76 77, on right: 73 74
enummath (82)
    on left: 78 79 80, on right: 77 79 80
enummathitm (83)
    on left: 81 82, on right: 78 79 80
enmitmname (84)
    on left: 83, on right: 76 77
membs (85)
    on left: 84 85, on right: 34 57 85
membline (86)
    on left: 86 87 88 89 90 91, on right: 84 85
membdefn (87)
    on left: 92 93 94 95 96, on right: 86
basicmemb (88)
    on left: 97 98, on right: 92
nostatmemb (89)
    on left: 99 100 101 102, on right: 97 98
membnames (90)
    on left: 103 104, on right: 99 100 104
membname (91)
    on left: 105, on right: 101 103 104
membfunp (92)
    on left: 106, on right: 102
methdefn (93)
    on left: 107 108 109 110 111 112 113 114 115 116 117 118 119,
    on right: 87
basicmeth (94)
    on left: 120 121, on right: 107
nostatmeth (95)
    on left: 122 123 124 125 126, on right: 120 121
mbfundefn (96)
    on left: 127, on right: 122 123
methname (97)
    on left: 128, on right: 68 118 119 127
fundefn (98)
    on left: 129 130 131 132 133 134, on right: 66 67 108 109 110 111
    112 113 114 118 119 122 123 124 125 126
funsubdefn (99)
    on left: 135 136 137, on right: 130 133
funsubdecl (100)
    on left: 138 139 140, on right: 131 134
funargs (101)
    on left: 141 142, on right: 19 68 102 113 114 118 119 124 125 126
    127 153
constfun (102)
    on left: 143 144, on right: 108 109 110 111 112
args (103)
    on left: 145 146 147, on right: 142 144 146 147
argdefn (104)
    on left: 148 149, on right: 145 146
subargdefn (105)
    on left: 150 151 152 153 154, on right: 148 149
constrlist (106)
    on left: 155 156, on right: 110 156
constref (107)
    on left: 157, on right: 155 156
consthsnm (108)
    on left: 158, on right: 108 109 110 111 112
constcoln (109)
    on left: 159, on right: 157
ptrs (110)
    on left: 160 161, on right: 161 170
membtype (111)
    on left: 162, on right: 99 101 102 122 124 125
ftype (112)
    on left: 163 164 165, on right: 66 113 115 116 118 162
tyname (113)
    on left: 166, on right: 16 17 19 20 26 40 63 64 175
type (114)
    on left: 167 168, on right: 16 17 18 19 20 46 47 150 151 152 153
    163 165
noreftype (115)
    on left: 169 170, on right: 167 168
constype (116)
    on left: 171 172, on right: 169 170
subtype (117)
    on left: 173 174 175 176 177 178 179 180 181 182 183,
    on right: 171 172
combtype (118)
    on left: 184 185, on right: 173 174 185
templtypes (119)
    on left: 186 187, on right: 182 183 187
tdname (120)
    on left: 188 189, on right: 15
funtspec (121)
    on left: 190 191, on right: 109 112 164 165 191
funtsmod (122)
    on left: 192 193, on right: 190 191
varname (123)
    on left: 194 195, on right: 33 56
term (124)
    on left: 196, on right: 15 16 17 18 19 22 29 30 32 33 55 56 90
    99 100 101 102 115 116 117 129 131 132 134
access (125)
    on left: 197 198 199, on right: 52
structunion (126)
    on left: 200 201, on right: 43 174 175
classkeyword (127)
    on left: 202, on right: 40 41 42


state 0

    0 $accept: . list $end

    $default  reduce using rule 1 (list)

    list  go to state 1


state 1

    0 $accept: list . $end
    2 list: list . typedefn
    3     | list . enumdefn
    4     | list . classdecl
    5     | list . classdefn
    6     | list . templdefn
    7     | list . fundecl
    8     | list . preparsed
    9     | list . error

    $end        shift, and go to state 2
    error       shift, and go to state 3
    CLASS       shift, and go to state 4
    STRUCT      shift, and go to state 5
    UNION       shift, and go to state 6
    ENUM        shift, and go to state 7
    TEMPLATE    shift, and go to state 8
    TYPEDEF     shift, and go to state 9
    TA_TYPEDEF  shift, and go to state 10
    REGFUN      shift, and go to state 11

    preparsed     go to state 12
    typedefn      go to state 13
    typedefns     go to state 14
    typedsub      go to state 15
    enumdefn      go to state 16
    enumdsub      go to state 17
    enumname      go to state 18
    enumnm        go to state 19
    classdecl     go to state 20
    classdecls    go to state 21
    classdefn     go to state 22
    classdefns    go to state 23
    classdsub     go to state 24
    classname     go to state 25
    classhead     go to state 26
    classnm       go to state 27
    templdefn     go to state 28
    templdefns    go to state 29
    templdsub     go to state 30
    templname     go to state 31
    templhead     go to state 32
    fundecl       go to state 33
    funnm         go to state 34
    structunion   go to state 35
    classkeyword  go to state 36


state 2

    0 $accept: list $end .

    $default  accept


state 3

    9 list: list error .

    $default  reduce using rule 9 (list)


state 4

  202 classkeyword: CLASS .

    $default  reduce using rule 202 (classkeyword)


state 5

  200 structunion: STRUCT .

    $default  reduce using rule 200 (structunion)


state 6

  201 structunion: UNION .

    $default  reduce using rule 201 (structunion)


state 7

   26 enumnm: ENUM . tyname
   27       | ENUM .

    NAME  shift, and go to state 37

    $default  reduce using rule 27 (enumnm)

    tyname  go to state 38


state 8

   61 templhead: TEMPLATE . templopen templpars '>' classhead

    '<'  shift, and go to state 39

    templopen  go to state 40


state 9

   14 typedsub: TYPEDEF . defn
   15         | TYPEDEF . classdsub tdname term

    CLASS     shift, and go to state 4
    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    CONST     shift, and go to state 41
    TYPE      shift, and go to state 42
    SCOPER    shift, and go to state 43
    THISNAME  shift, and go to state 44

    defn          go to state 45
    classdsub     go to state 46
    classname     go to state 25
    classhead     go to state 26
    classnm       go to state 47
    type          go to state 48
    noreftype     go to state 49
    constype      go to state 50
    subtype       go to state 51
    combtype      go to state 52
    structunion   go to state 53
    classkeyword  go to state 36


state 10

   10 preparsed: TA_TYPEDEF .

    $default  reduce using rule 10 (preparsed)


state 11

   66 funnm: REGFUN . ftype regfundefn fundefn
   67      | REGFUN . regfundefn fundefn

    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    FUNTYPE   shift, and go to state 54
    CONST     shift, and go to state 41
    TYPE      shift, and go to state 42
    NAME      shift, and go to state 55
    SCOPER    shift, and go to state 43
    THISNAME  shift, and go to state 44
    VIRTUAL   shift, and go to state 56

    regfundefn   go to state 57
    methname     go to state 58
    ftype        go to state 59
    type         go to state 60
    noreftype    go to state 49
    constype     go to state 50
    subtype      go to state 51
    combtype     go to state 52
    funtspec     go to state 61
    funtsmod     go to state 62
    structunion  go to state 63


state 12

    8 list: list preparsed .

    $default  reduce using rule 8 (list)


state 13

    2 list: list typedefn .

    $default  reduce using rule 2 (list)


state 14

   11 typedefn: typedefns .

    $default  reduce using rule 11 (typedefn)


state 15

   12 typedefns: typedsub .
   13          | typedsub . COMMENT

    COMMENT  shift, and go to state 64

    $default  reduce using rule 12 (typedefns)


state 16

    3 list: list enumdefn .

    $default  reduce using rule 3 (list)


state 17

   21 enumdefn: enumdsub .

    $default  reduce using rule 21 (enumdefn)


state 18

   22 enumdsub: enumname . enums '}' term

    error  shift, and go to state 65
    NAME   shift, and go to state 66

    enums       go to state 67
    enumline    go to state 68
    enumitm     go to state 69
    enumitms    go to state 70
    enmitmname  go to state 71


state 19

   23 enumname: enumnm . '{'
   24         | enumnm . COMMENT '{'
   25         | enumnm . '{' COMMENT

    COMMENT  shift, and go to state 72
    '{'      shift, and go to state 73


state 20

    4 list: list classdecl .

    $default  reduce using rule 4 (list)


state 21

   28 classdecl: classdecls .

    $default  reduce using rule 28 (classdecl)


state 22

    5 list: list classdefn .

    $default  reduce using rule 5 (list)


state 23

   31 classdefn: classdefns .

    $default  reduce using rule 31 (classdefn)


state 24

   32 classdefns: classdsub . term
   33           | classdsub . varname term

    NAME  shift, and go to state 74
    ';'   shift, and go to state 75

    varname  go to state 76
    term     go to state 77


state 25

   34 classdsub: classname . membs '}'

    error      shift, and go to state 78
    CLASS      shift, and go to state 4
    STRUCT     shift, and go to state 5
    UNION      shift, and go to state 6
    ENUM       shift, and go to state 7
    FUNTYPE    shift, and go to state 54
    STATIC     shift, and go to state 79
    CONST      shift, and go to state 41
    TYPEDEF    shift, and go to state 9
    TYPE       shift, and go to state 42
    NAME       shift, and go to state 80
    COMMENT    shift, and go to state 81
    SCOPER     shift, and go to state 43
    PUBLIC     shift, and go to state 82
    PRIVATE    shift, and go to state 83
    PROTECTED  shift, and go to state 84
    OPERATOR   shift, and go to state 85
    FRIEND     shift, and go to state 86
    THISNAME   shift, and go to state 87
    VIRTUAL    shift, and go to state 56
    '~'        shift, and go to state 88

    typedsub      go to state 89
    enumdsub      go to state 90
    enumname      go to state 18
    enumnm        go to state 19
    classdsub     go to state 91
    classname     go to state 25
    classhead     go to state 26
    classnm       go to state 47
    membs         go to state 92
    membline      go to state 93
    membdefn      go to state 94
    basicmemb     go to state 95
    nostatmemb    go to state 96
    membnames     go to state 97
    membname      go to state 98
    methdefn      go to state 99
    basicmeth     go to state 100
    nostatmeth    go to state 101
    mbfundefn     go to state 102
    methname      go to state 103
    consthsnm     go to state 104
    membtype      go to state 105
    ftype         go to state 106
    type          go to state 60
    noreftype     go to state 49
    constype      go to state 50
    subtype       go to state 51
    combtype      go to state 52
    funtspec      go to state 107
    funtsmod      go to state 62
    structunion   go to state 53
    classkeyword  go to state 36


state 26

   35 classname: classhead . '{'
   36          | classhead . COMMENT '{'
   37          | classhead . '{' COMMENT

    COMMENT  shift, and go to state 108
    '{'      shift, and go to state 109


state 27

   29 classdecls: classnm . term
   30           | classnm . term COMMENT
   38 classhead: classnm .
   39          | classnm . ':' classinh

    ':'  shift, and go to state 110
    ';'  shift, and go to state 75

    $default  reduce using rule 38 (classhead)

    term  go to state 111


state 28

    6 list: list templdefn .

    $default  reduce using rule 6 (list)


state 29

   54 templdefn: templdefns .

    $default  reduce using rule 54 (templdefn)


state 30

   55 templdefns: templdsub . term
   56           | templdsub . varname term

    NAME  shift, and go to state 74
    ';'   shift, and go to state 75

    varname  go to state 112
    term     go to state 113


state 31

   57 templdsub: templname . membs '}'

    error      shift, and go to state 78
    CLASS      shift, and go to state 4
    STRUCT     shift, and go to state 5
    UNION      shift, and go to state 6
    ENUM       shift, and go to state 7
    FUNTYPE    shift, and go to state 54
    STATIC     shift, and go to state 79
    CONST      shift, and go to state 41
    TYPEDEF    shift, and go to state 9
    TYPE       shift, and go to state 42
    NAME       shift, and go to state 80
    COMMENT    shift, and go to state 81
    SCOPER     shift, and go to state 43
    PUBLIC     shift, and go to state 82
    PRIVATE    shift, and go to state 83
    PROTECTED  shift, and go to state 84
    OPERATOR   shift, and go to state 85
    FRIEND     shift, and go to state 86
    THISNAME   shift, and go to state 87
    VIRTUAL    shift, and go to state 56
    '~'        shift, and go to state 88

    typedsub      go to state 89
    enumdsub      go to state 90
    enumname      go to state 18
    enumnm        go to state 19
    classdsub     go to state 91
    classname     go to state 25
    classhead     go to state 26
    classnm       go to state 47
    membs         go to state 114
    membline      go to state 93
    membdefn      go to state 94
    basicmemb     go to state 95
    nostatmemb    go to state 96
    membnames     go to state 97
    membname      go to state 98
    methdefn      go to state 99
    basicmeth     go to state 100
    nostatmeth    go to state 101
    mbfundefn     go to state 102
    methname      go to state 103
    consthsnm     go to state 104
    membtype      go to state 105
    ftype         go to state 106
    type          go to state 60
    noreftype     go to state 49
    constype      go to state 50
    subtype       go to state 51
    combtype      go to state 52
    funtspec      go to state 107
    funtsmod      go to state 62
    structunion   go to state 53
    classkeyword  go to state 36


state 32

   58 templname: templhead . '{'
   59          | templhead . COMMENT '{'
   60          | templhead . '{' COMMENT

    COMMENT  shift, and go to state 115
    '{'      shift, and go to state 116


state 33

    7 list: list fundecl .

    $default  reduce using rule 7 (list)


state 34

   65 fundecl: funnm .

    $default  reduce using rule 65 (fundecl)


state 35

   43 classnm: structunion .

    $default  reduce using rule 43 (classnm)


state 36

   40 classnm: classkeyword . tyname
   41        | classkeyword . TYPE
   42        | classkeyword .

    TYPE  shift, and go to state 117
    NAME  shift, and go to state 37

    $default  reduce using rule 42 (classnm)

    tyname  go to state 118


state 37

  166 tyname: NAME .

    $default  reduce using rule 166 (tyname)


state 38

   26 enumnm: ENUM tyname .

    $default  reduce using rule 26 (enumnm)


state 39

   62 templopen: '<' .

    $default  reduce using rule 62 (templopen)


state 40

   61 templhead: TEMPLATE templopen . templpars '>' classhead

    CLASS  shift, and go to state 119

    templpars  go to state 120


state 41

  172 constype: CONST . subtype

    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    TYPE      shift, and go to state 42
    SCOPER    shift, and go to state 43
    THISNAME  shift, and go to state 44

    subtype      go to state 121
    combtype     go to state 52
    structunion  go to state 63


state 42

  176 subtype: TYPE . SCOPER NAME
  178        | TYPE . SCOPER TYPE
  182        | TYPE . templopen templtypes '>'
  184 combtype: TYPE .

    SCOPER  shift, and go to state 122
    '<'     shift, and go to state 39

    SCOPER    [reduce using rule 184 (combtype)]
    $default  reduce using rule 184 (combtype)

    templopen  go to state 123


state 43

  180 subtype: SCOPER . TYPE

    TYPE  shift, and go to state 124


state 44

  177 subtype: THISNAME . SCOPER NAME
  179        | THISNAME . SCOPER TYPE
  181        | THISNAME .
  183        | THISNAME . templopen templtypes '>'

    SCOPER  shift, and go to state 125
    '<'     shift, and go to state 39

    SCOPER    [reduce using rule 181 (subtype)]
    $default  reduce using rule 181 (subtype)

    templopen  go to state 126


state 45

   14 typedsub: TYPEDEF defn .

    $default  reduce using rule 14 (typedsub)


state 46

   15 typedsub: TYPEDEF classdsub . tdname term

    TYPE  shift, and go to state 127
    NAME  shift, and go to state 128

    tdname  go to state 129


state 47

   38 classhead: classnm .
   39          | classnm . ':' classinh

    ':'  shift, and go to state 110

    $default  reduce using rule 38 (classhead)


state 48

   16 defn: type . tyname term
   17     | type . COMMENT tyname term
   18     | type . term
   19     | type . '(' '*' tyname ')' funargs term
   20     | type . SCOPER '*' tyname

    NAME     shift, and go to state 37
    COMMENT  shift, and go to state 130
    SCOPER   shift, and go to state 131
    '('      shift, and go to state 132
    ';'      shift, and go to state 75

    tyname  go to state 133
    term    go to state 134


state 49

  167 type: noreftype .
  168     | noreftype . '&'

    '&'  shift, and go to state 135

    $default  reduce using rule 167 (type)


state 50

  169 noreftype: constype .
  170          | constype . ptrs

    '*'  shift, and go to state 136

    $default  reduce using rule 169 (noreftype)

    ptrs  go to state 137


state 51

  171 constype: subtype .

    $default  reduce using rule 171 (constype)


state 52

  173 subtype: combtype .
  185 combtype: combtype . TYPE

    TYPE  shift, and go to state 138

    $default  reduce using rule 173 (subtype)


state 53

   43 classnm: structunion .
  174 subtype: structunion . combtype
  175        | structunion . tyname

    TYPE  shift, and go to state 139
    NAME  shift, and go to state 37

    $default  reduce using rule 43 (classnm)

    tyname    go to state 140
    combtype  go to state 141


state 54

  192 funtsmod: FUNTYPE .

    $default  reduce using rule 192 (funtsmod)


state 55

  128 methname: NAME .

    $default  reduce using rule 128 (methname)


state 56

  193 funtsmod: VIRTUAL .

    $default  reduce using rule 193 (funtsmod)


state 57

   67 funnm: REGFUN regfundefn . fundefn

    CONST     shift, and go to state 142
    FUNCTION  shift, and go to state 143
    COMMENT   shift, and go to state 144
    EQUALS    shift, and go to state 145
    ';'       shift, and go to state 75

    fundefn     go to state 146
    funsubdefn  go to state 147
    funsubdecl  go to state 148
    term        go to state 149


state 58

   68 regfundefn: methname . funargs

    '('  shift, and go to state 150

    funargs  go to state 151


state 59

   66 funnm: REGFUN ftype . regfundefn fundefn

    NAME  shift, and go to state 55

    regfundefn  go to state 152
    methname    go to state 58


state 60

  163 ftype: type .

    $default  reduce using rule 163 (ftype)


state 61

  164 ftype: funtspec .
  165      | funtspec . type
  191 funtspec: funtspec . funtsmod

    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    FUNTYPE   shift, and go to state 54
    CONST     shift, and go to state 41
    TYPE      shift, and go to state 42
    SCOPER    shift, and go to state 43
    THISNAME  shift, and go to state 44
    VIRTUAL   shift, and go to state 56

    $default  reduce using rule 164 (ftype)

    type         go to state 153
    noreftype    go to state 49
    constype     go to state 50
    subtype      go to state 51
    combtype     go to state 52
    funtsmod     go to state 154
    structunion  go to state 63


state 62

  190 funtspec: funtsmod .

    $default  reduce using rule 190 (funtspec)


state 63

  174 subtype: structunion . combtype
  175        | structunion . tyname

    TYPE  shift, and go to state 139
    NAME  shift, and go to state 37

    tyname    go to state 140
    combtype  go to state 141


state 64

   13 typedefns: typedsub COMMENT .

    $default  reduce using rule 13 (typedefns)


state 65

   75 enumitm: error .

    $default  reduce using rule 75 (enumitm)


state 66

   83 enmitmname: NAME .

    $default  reduce using rule 83 (enmitmname)


state 67

   22 enumdsub: enumname enums . '}' term
   70 enums: enums . enumline

    error  shift, and go to state 65
    NAME   shift, and go to state 66
    '}'    shift, and go to state 155

    enumline    go to state 156
    enumitm     go to state 69
    enumitms    go to state 70
    enmitmname  go to state 71


state 68

   69 enums: enumline .

    $default  reduce using rule 69 (enums)


state 69

   71 enumline: enumitm .
   72         | enumitm . COMMENT

    COMMENT  shift, and go to state 157

    $default  reduce using rule 71 (enumline)


state 70

   73 enumitm: enumitms .
   74        | enumitms . ','

    ','  shift, and go to state 158

    $default  reduce using rule 73 (enumitm)


state 71

   76 enumitms: enmitmname .
   77         | enmitmname . EQUALS enummath

    EQUALS  shift, and go to state 159

    $default  reduce using rule 76 (enumitms)


state 72

   24 enumname: enumnm COMMENT . '{'

    '{'  shift, and go to state 160


state 73

   23 enumname: enumnm '{' .
   25         | enumnm '{' . COMMENT

    COMMENT  shift, and go to state 161

    $default  reduce using rule 23 (enumname)


state 74

  194 varname: NAME .
  195        | NAME . ARRAY

    ARRAY  shift, and go to state 162

    $default  reduce using rule 194 (varname)


state 75

  196 term: ';' .

    $default  reduce using rule 196 (term)


state 76

   33 classdefns: classdsub varname . term

    ';'  shift, and go to state 75

    term  go to state 163


state 77

   32 classdefns: classdsub term .

    $default  reduce using rule 32 (classdefns)


state 78

   91 membline: error .

    $default  reduce using rule 91 (membline)


state 79

   98 basicmemb: STATIC . nostatmemb
  121 basicmeth: STATIC . nostatmeth

    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    FUNTYPE   shift, and go to state 54
    CONST     shift, and go to state 41
    TYPE      shift, and go to state 42
    NAME      shift, and go to state 80
    SCOPER    shift, and go to state 43
    OPERATOR  shift, and go to state 85
    THISNAME  shift, and go to state 44
    VIRTUAL   shift, and go to state 56

    nostatmemb   go to state 164
    membnames    go to state 97
    membname     go to state 98
    nostatmeth   go to state 165
    mbfundefn    go to state 102
    methname     go to state 103
    membtype     go to state 105
    ftype        go to state 106
    type         go to state 60
    noreftype    go to state 49
    constype     go to state 50
    subtype      go to state 51
    combtype     go to state 52
    funtspec     go to state 61
    funtsmod     go to state 62
    structunion  go to state 63


state 80

  105 membname: NAME .
  128 methname: NAME .

    '('       reduce using rule 128 (methname)
    $default  reduce using rule 105 (membname)


state 81

   96 membdefn: COMMENT .

    $default  reduce using rule 96 (membdefn)


state 82

   93 membdefn: PUBLIC . ':'

    ':'  shift, and go to state 166


state 83

   94 membdefn: PRIVATE . ':'

    ':'  shift, and go to state 167


state 84

   95 membdefn: PROTECTED . ':'

    ':'  shift, and go to state 168


state 85

  126 nostatmeth: OPERATOR . funargs fundefn

    '('  shift, and go to state 150

    funargs  go to state 169


state 86

  113 methdefn: FRIEND . ftype OPERATOR funargs fundefn
  114         | FRIEND . OPERATOR funargs fundefn
  115         | FRIEND . ftype term
  116         | FRIEND . CLASS ftype term
  117         | FRIEND . CLASS NAME term
  118         | FRIEND . ftype methname funargs fundefn
  119         | FRIEND . methname funargs fundefn

    CLASS     shift, and go to state 170
    STRUCT    shift, and go to state 5
    UNION     shift, and go to state 6
    FUNTYPE   shift, and go to state 54
    CONST     shift, and go to state 41
    TYPE      shift, and go to state 42
    NAME      shift, and go to state 55
    SCOPER    shift, and go to state 43
    OPERATOR  shift, and go to state 171
    THISNAME  shift, and go to state 44
    VIRTUAL   shift, and go to state 56

    methname     go to state 172
    ftype        go to state 173
    type         go to state 60
    noreftype    go to state 49
    constype     go to state 50
    subtype      go to state 51
    combtype     go to state 52
    funtspec     go to state 61
    funtsmod     go to state 62
    structunion  go to state 63


state 87

  158 consthsnm: THISNAME . '('
  177 subtype: THISNAME . SCOPER NAME
  179        | THISNAME . SCOPER TYPE
  181        | THISNAME .
  183        | THISNAME . templopen templtypes '>'

    SCOPER  shift, and go to state 125
    '('     shift, and go to state 174
    '<'     shift, and go to state 39

    '('       [reduce using rule 181 (subtype)]
    $default  reduce using rule 181 (subtype)

    templopen  go to state 126


state 88

  111 methdefn: '~' . consthsnm constfun fundefn

    THISNAME  shift, and go to state 175

    consthsnm  go to state 176


state 89

   89 membline: typedsub .

    $default  reduce using rule 89 (membline)


state 90

   88 membline: enumdsub .

    $default  reduce using rule 88 (membline)


state 91

   90 membline: classdsub . term

    ';'  shift, and go to state 75

    term  go to state 177


state 92

   34 classdsub: classname membs . '}'
   85 membs: membs . membline
